# BTLE

./: .gitignore  BUILD.gn  README.md  b  ib
archive/: CMakeLists.txt
archive/btle-tools/: CMakeLists.txt
archive/btle-tools/src/: CMakeLists.txt  brf_adv_pdu_payload.h  brf_crc.h  btle_blade.c  btle_receiver.h  btle_rx.c  scramble_table.h
host/btle-tools/: CMakeLists.txt
host/btle-tools/src/: CMakeLists.txt  brf_adv_pdu.c  brf_adv_pdu.h  brf_crc.c  brf_shift_queue.c  brf_shift_queue.h  btle_blade.c  btle_blade.h  btle_rx.c  common.h
src/: BUILD.gn  brf_ll_pdu.c  brf_ll_pdu.h  brf_shift_queue.c  btle_blade.c  btle_blade.h
